@@ -1,0 +1,10 @@
+auto: REMOVE_FILE,CREATE_FILE,MUNGE,COMPARE_FILE %TESTID%.stdout %TESTID%.stderr
+
+test action: CMD_CAPTURE %SWAKS% --to user@host1.nodns.test.swaks.net --from recip@host1.nodns.test.swaks.net --helo hserver \
+  --xclient-login jetmore --xclient-helo foo --xclient-reverse-name bar --xclient-addr 1.1.1.1 \
+   --pipe '%TEST_SERVER% --silent --domain pipe \
+  part-0000-connect-standard.txt \
+  part-0102-ehlo-xclient-fewer.txt \
+  part-3000-shutdown-accept.txt \
+  '
+
