@@ -1,1 +1,1 @@
-*** Host did not advertise requested XCLIENT attributes
+*** Host did not advertise requested XCLIENT attributes (LOGIN)
